--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,8 +58,8 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 40px;
     text-shadow: 2px 2px black;
-    margin-bottom: 20px;
 }
 
 nav {
